<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Finance Tracker</string>
    <string name="select_fund">Select Fund</string>
    <string name="investor_name">Investor Name</string>
    <string name="enter_investor_name">Enter Investor Name</string>
    <string name="investment_date">Investment Date</string>
    <string name="active">Active</string>
    <string name="complete">Complete</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="txt_add">Add</string>

</resources>