<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/tvFundLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/select_fund"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFund"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFundLabel">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spinnerFund"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_fund"
                android:inputType="none"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvInvestorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/investor_name"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutFund" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etInvestorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInvestorLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_investor_name"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="@string/investment_date"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etInvestorName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etInvestmentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:fontFamily="@font/roboto_regular"
                android:hint="Select Date"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/roboto_semibold"
            android:text="Investment Amount"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etInvestmentDate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etInvestmentAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAmountLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="Enter Amount"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/btnStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etInvestmentAmount">

            <TextView
                android:id="@+id/tvStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:fontFamily="@font/roboto_semibold"
                android:text="Status"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />

            <RadioGroup
                android:id="@+id/radioGroupStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active" />

                <RadioButton
                    android:id="@+id/radioComplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete" />
            </RadioGroup>
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:backgroundTint="@color/dark_blue"
            android:text="Submit"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnStatus" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
